--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,5 +3,33 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+    <!-- springmvc前端控制器 -->
+    <servlet>
+        <servlet-name>springmvc</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- contextConfigLocation配置springmvc加载的配置文件（配置处理器映射器、适配器等等）
+        如果不配置contextConfigLocation，默认加载的是/WEB-INF/servlet名称-serlvet.xml（springmvc-servlet.xml）
+         -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:springMVC.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 
+    <servlet-mapping>
+        <servlet-name>springmvc</servlet-name>
+        <!--
+        第一种：*.action，访问以.action结尾 由DispatcherServlet进行解析
+        第二种：/，所以访问的地址都由DispatcherServlet进行解析，对于静态文件的解析需要配置不让DispatcherServlet进行解析
+        使用此种方式可以实现 RESTful风格的url
+        第三种：/*，这样配置不对，使用这种配置，最终要转发到一个jsp页面时，
+        仍然会由DispatcherServlet解析jsp地址，不能根据jsp页面找到handler，会报错。
+
+         -->
+        <url-pattern>*.action</url-pattern>
+    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>welcome.html</welcome-file>
+    </welcome-file-list>
 </web-app>
